<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ZsxyTextView="http://schemas.android.com/apk/res/com.zsxy"
    android:id="@+id/function_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.zsxy.view.ZsxyTextView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/search_sorce"
        android:textColor="@color/black" />

    <com.zsxy.view.ZsxyTextView
        android:id="@+id/homework"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ZsxyTextView:topBorder="false"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/homework"
        android:textColor="@color/black" />

    <com.zsxy.view.ZsxyTextView
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ZsxyTextView:topBorder="false"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/educational_notification"
        android:textColor="@color/black" />

    <com.zsxy.view.ZsxyTextView
        android:id="@+id/partner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ZsxyTextView:topBorder="false"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/partner"
        android:textColor="@color/black" />

    <com.zsxy.view.ZsxyTextView
        android:id="@+id/set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ZsxyTextView:topBorder="false"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/set"
        android:textColor="@color/black" />

</LinearLayout>